deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello-md
  namespace: yby-mdhume-k8s
  labels:
    app: hello-md
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-md
  template:
    metadata:
      labels:
        app: hello-md
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: buoyantio/helloworld:0.1.4
        command:
        - "/bin/sh"
        - "-c"
        - "helloworld -addr=:7777 -text=Hello -protocol=grpc"
        ports:
        - name: service
          containerPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: hello-md
  namespace: yby-mdhume-k8s
  labels:
    app: hello-md
spec:
  selector:
    app: hello-md
  ports:
  - name: grpc
    port: 7777
